# ShopStore

./: .gitignore  README.md  after setup folder structure.md  backend_approach.md  developer_approach.md  folder structure.txt  terminal inputs
ShopSphere/backend/: alembic.ini  main.py  pyproject.toml  seed.py
ShopSphere/backend/app/core/: deps.py  security.py
ShopSphere/backend/app/database/: database.py
ShopSphere/backend/app/models/Cart/: cart_model.py
ShopSphere/backend/app/models/Orders/: order_model.py
ShopSphere/backend/app/models/Products/: products_model.py
ShopSphere/backend/app/models/Promos/: promo_model.py
ShopSphere/backend/app/models/User/: user_models.py
ShopSphere/backend/app/routes/v1/: auth.py  cart.py  order.py  product.py  promo.py
ShopSphere/backend/app/schemas/Cart/: cart_schema.py
ShopSphere/backend/app/schemas/Orders/: order_schema.py
ShopSphere/backend/app/schemas/Products/: products_schema.py
ShopSphere/backend/app/schemas/Promos/: promo_schema.py
ShopSphere/backend/app/schemas/User/: user_schema.py
ShopSphere/backend/migrations/: env.py
ShopSphere/backend/migrations/versions/: 0a376f96ad00_init_tables.py  44c5774f01e8_init_tables.py  4a141ba2e633_create_all_tables.py  b9877fca3604_fix_foreign_keys.py  e93a339eb9f9_create_tables_actual.py  f9a06f1e1ce4_fix_cart_product_relationship.py
ShopSphere/frontend/: index.html  package-lock.json  package.json
ShopSphere/frontend/src/: App.jsx  index.css
